--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,10 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+     {{ title }}!
     <img [src]="foto">
+    <button  (click)="msgAlerta()">Enviar Alerta</button>
   </h1>
- 
+  <app-lista-pessoa></app-lista-pessoa>
 </div>
 
 
