--- a/form-angular/src/app/address-card-component/address-card-component.component.html
+++ b/form-angular/src/app/address-card-component/address-card-component.component.html
@@ -1,5 +1,17 @@
 <div>
-  <h1 class="name">{{user.name}}</h1>
+  <h1 class="name">{{user}}</h1>
+  <h3 class="title">{{user}}</h3>
+  <button>Expand</button>
+  <button>Collapse</button>
+  <div>
+    <p>{{user}}</p>
+    <div>
+      <p>Phone:</p>
+      <p></p>
+    </div>
+
+
+  </div>
   
 
 
