--- a/form-angular/src/app/address-card-component/address-card-component.component.html
+++ b/form-angular/src/app/address-card-component/address-card-component.component.html
@@ -1,13 +1,13 @@
 <div>
-  <h1 class="name">{{user}}</h1>
-  <h3 class="title">{{user}}</h3>
-  <button>Expand</button>
-  <button>Collapse</button>
-  <div>
-    <p>{{user}}</p>
-    <div>
+  <h1 class="name">{{user.name}}</h1>
+  <h3 class="title">{{user.designation}}</h3>
+  <button *ngIf="isCollapsed" (click)="toggleCollapse()">Expand</button>
+  <button *ngIf="!isCollapsed" (click)="toggleCollapse()">Collapse</button>
+  <div *ngIf="!isCollapsed">
+    <p class="address">{{user.address}}</p>
+    <div class="phone" *ngIf="user.phone.length">
       <p>Phone:</p>
-      <p></p>
+      <p *ngFor="let phoneNumber of user.phone">{{phoneNumber}}</p>
     </div>
 
 
