--- a/form-angular/src/app/app.component.html
+++ b/form-angular/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>New Project</h1>
-<app-address-card-component></app-address-card-component>
+
+<app-address-card-component [user]="user"></app-address-card-component>
+<input type="text" [(ngModel)]="inputText"> 
