--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,12 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-     {{ title }}!
-    <img [src]="foto">
-    <button  (click)="msgAlerta()">Enviar Alerta</button>
-  </h1>
-  <app-lista-pessoa></app-lista-pessoa>
-</div>
-
+<diretivas></diretivas>
+<app-lista-pessoa></app-lista-pessoa>
+<button (click)="enviarMsg()">Service</button>
 
 
